<resources>
    <string name="app_name">Eng-Myan Dictionary</string>
    <string name="empty_string"></string>

    <string name="action_moreoverflow">Menu</string>
    <string name="action_about">About</string>
    <string name="action_settings">Settings</string>
    <string name="action_favorite">Add to Favorite</string>
    <string name="action_favorite_remove">Remove from Favorite</string>
    <string name="action_manage_favorites">Manage Favorites</string>
    <string name="action_recent">Recents</string>
    <string name="action_exit">Exit</string>
    <string name="action_sound">Sound</string>
    <string name="action_picture">Picture</string>
    <string name="action_done">Done</string>
    <string name="action_close">Close</string>
    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>
    <string name="action_clear">Clear</string>
    <string name="action_select_all">Select All</string>
    <string name="action_back">Back</string>
    <string name="action_forward">Forward</string>

    <string name="search_hint">Search …</string>
    <string name="settings_description">Definitions of words</string>

    <string name="loading_text">Loading …</string>

    <string name="install_text">Please Wait …</string>
    <string name="install_message">Installing …</string>
    <string name="install_complete_message">Installation completed. Enjoy it.</string>
    <string name="install_error_folder_create">Does not create data folder!</string>
    <string name="install_error_data_load">Does not load data!</string>
    <string name="install_error_message">Does not install data!</string>

    <string name="no_sound_message">No sound detected.</string>
    <string name="add_favorites_message">Favorite added.</string>
    <string name="remove_favorites_message">Favorite removed.</string>

    <string name="title_synonym">Synonym</string>

    <string name="favorites_title">Favorites</string>
    <string name="favorites_edit_title">Edit Favorites</string>
    <string name="favorites_delete_message">Are you sure to delete selected favorites?</string>

    <string name="recents_title">Recents</string>
    <string name="clear_recent_title">Clear Recents</string>
    <string name="clear_recent_message">Are you sure to clear all recents?</string>

    <string name="prefs_category_general">General</string>

    <string name="prefs_used_unicode_fix">Used Unicode Fix</string>
    <string name="prefs_used_unicode_fix_summary">Fix up with correct unicode charaters.</string>

    <string name="prefs_used_word_clickable">Enabled word link</string>
    <string name="prefs_used_word_clickable_summary">Show definition when click some word.</string>

    <string name="prefs_show_synonym">Show Synonym</string>
    <string name="prefs_show_synonym_summary">Show Synonym under definition.</string>

    <string name="prefs_category_about">About</string>

    <string name="prefs_about">About Dictionary</string>
    <string name="version_text">Version - %s</string>

    <string name="prefs_credit">Credit</string>
    <string name="prefs_credit_summary">Credit of dictionary</string>

    <string name="about_text"><Data>
      <![CDATA["
      <p><b>Eng-Myan Dictionary</b></p>
      <p>Word : 21984<br/>Images : 933</p>
      <p>Develop by <a href='http://www.facebook.com/soeminnminn'>Soe Minn Minn</a></p>
      <p>Copyright \u00A9 2014 The Android Open Source Project</p>
      "]]>
    </Data></string>

    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
