<menu xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context="com.s16.engmyan.activity.MainActivity">
    
    <item
        android:id="@+id/action_favorite"
        android:orderInCategory="100"
        android:icon="@drawable/ic_favorite"
        android:title="@string/action_favorite"/>
    
    <item
        android:id="@+id/action_sound"
        android:orderInCategory="100"
        android:icon="@drawable/ic_volume_up_white"
        android:title="@string/action_sound"
        app:showAsAction="withText|ifRoom" />
    
    <item
        android:id="@+id/action_picture"
        android:orderInCategory="100"
        android:icon="@drawable/ic_photo_white"
        android:title="@string/action_picture"
        app:showAsAction="withText|ifRoom"/>
    
    <!-- Favorites -->
    <item 
        android:id="@+id/action_manage_favorites"
        android:orderInCategory="100"
        android:icon="@drawable/ic_favorite_border_white"
        android:title="@string/action_manage_favorites"
        app:showAsAction="never"/>
    
    <!-- Recent -->
    <item 
        android:id="@+id/action_recent"
        android:orderInCategory="100"
        android:icon="@drawable/ic_alarm_white"
        android:title="@string/action_recent"
        app:showAsAction="never"/>
    
    <!-- Settings -->
    <item 
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:icon="@drawable/ic_settings_white"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    
    <!-- Exit -->
    <item 
        android:id="@+id/action_exit"
        android:orderInCategory="100"
        android:icon="@drawable/ic_exit_to_app_white"
        android:title="@string/action_exit"
        app:showAsAction="never" />

</menu>
