<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <header
        android:fragment="com.s16.engmyan.activity.SettingsActivity$GeneralPreferenceFragment"
        android:icon="@drawable/ic_info_outline_white_24dp"
        android:title="@string/pref_header_general" />

    <header
        android:fragment="com.s16.engmyan.activity.SettingsActivity$NotificationPreferenceFragment"
        android:icon="@drawable/ic_alarm_white_24dp"
        android:title="@string/pref_header_notifications" />

    <header
        android:fragment="com.s16.engmyan.activity.SettingsActivity$DataSyncPreferenceFragment"
        android:icon="@drawable/ic_settings_white_24dp"
        android:title="@string/pref_header_data_sync" />

</preference-headers>
